kubernetes/driver-service/driver-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-service-deployment
  namespace: lastmile
  labels:
    app: driver-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: driver-service
  template:
    metadata:
      labels:
        app: driver-service
    spec:
      containers:
      - name: driver-service
        image: imsonu2030/lastmile-driver-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
